# SMA_Sunny_Boy_Simulator

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  sma_inverter_profile.yaml
include/: config_loader.hpp  digital_twin.hpp  modbus_server.hpp  safe_data_model.hpp  simulation_engine.hpp
src/: config_loader.cpp  main.cpp  modbus_server.cpp  safe_data_model.cpp  simulation_engine.cpp
